--- a/Index.html
+++ b/Index.html
@@ -254,7 +254,7 @@
     <!-- Features Section -->
     <section class="features">
       <div class="container">
-        <h2>Why Choose Us?</h2>
+        <h2>/tool/vid.translation.Html?</h2>
         <div class="feature-grid">
           <div class="feature-card">
             <i class="fas fa-globe"></i>
